color and spacing corrections

--- a/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-CollectionCard.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-CollectionCard.scss
@@ -1,4 +1,3 @@
-$c-CollectionCard__text__height: 104px !default;
 $c-CollectionCard__text__title__textColor: $t-Color__primary !default;
 $c-CollectionCard__text__title__textColor--hover: $b-Typography__textColor__a--isHover !default;
 
@@ -23,7 +22,7 @@ $c-CollectionCard__border__bottom: null !default;
 }
 
 .c-CollectionCard__separator {
-  border-bottom: $c-CollectionCard__border;
+  border-bottom: 2px solid $t-Color__grey--lightest;
   width: 184px;
   margin-left: 8px;
   float: left;
@@ -31,17 +30,31 @@ $c-CollectionCard__border__bottom: null !default;
 
 .c-CollectionCard__circle {
   border-radius: 50%;
-  height: 50px;
+  height: 40px;
   background-color: $t-Color__primary;
-  width: 50px;
+  width: 40px;
   float:left;
-  margin-left: 67px; //200 - 2*8 (padding) - 50 (circle) / 2 -> 67
+  margin-left: 80px;
   color: white;
   text-align: center;
   font-size: 20px;
-  line-height: 50px;
+  line-height: 40px;
   position: relative;
-  top: 25px;
+  top: -22px;
+}
+
+.c-CollectionCard__plceholder__top {
+  height: 80px;
+}
+
+.c-CollectionCard__contests__tag {
+  color: $t-Color__grey--medium;
+  font-size: 12px;
+  text-align: center;
+  position: relative;
+  width: 200px;
+  float: left;
+  top: -15px;
 }
 
 .c-CollectionCard { //.contestbox {
@@ -82,20 +95,26 @@ $c-CollectionCard__border__bottom: null !default;
 .c-CollectionCard__text {
   float: left;
   width: 184px;
-  font-size: 12px;
+  font-size: 14px;
   padding: 8px;
-  line-height: 15px;
+  line-height: 19px;
   color: $t-Color__grey--dark;
-  height: $c-CollectionCard__text__height;
+  height: 170px;
+  overflow: hidden;
 }
 
 .c-CollectionCard__text__title {
-   font-size: 15px;
    color: $c-CollectionCard__text__title__textColor;
-   margin-top: 10px;
+   padding: 8px;
    text-align: center;
    float: left;
-   width: 200px;
+   width: 184px;
+   height: 60px;
+   overflow: hidden;
+   h3 {
+     font-size: 18px;
+     line-height: 22px;
+   }
    &:hover {
      color: $c-CollectionCard__text__title__textColor--hover;
      text-decoration: none;
@@ -111,13 +130,6 @@ $c-CollectionCard__border__bottom: null !default;
   float:left;
 }
 
-.c-CollectionCard__meta__info {
-  color: $t-Color__grey--medium;
-  width: 200px;
-  font-size: 14px;
-  float:left;
-  text-align: center;
-  margin-top: 30px;
-}
+
 
 
